--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        jvm_flag:
+          - "-XX:+UseG1GC" 
+          - "-XX:+PrintGCDetails"      
+          - "-XX:+OptimizeStringConcat"
+          - "-XX:+UseStringDeduplication" 
+          - "-XX:+AlwaysPreTouch"    
     steps:
       - uses: actions/checkout@v4
 
@@ -16,44 +24,23 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-<<<<<<< Updated upstream
-    - name: Build and Test with Maven
-      timeout-minutes: 15
-      run: ./mvnw -B verify
-
-    - name: Get JaCoCo Coverage
-      id: coverage  
-      run: |
-        coverage=$(python3 config/coverage.py target/site/jacoco/jacoco.csv) 
-        echo "COVERAGE=$coverage" >> $GITHUB_ENV
-
-    - name: Fail if coverage has not improved.
-      run: |
-        coverage=$COVERAGE
-        threshold=24.46
-        if (( $(echo "$coverage - $threshold <= 0.1" | bc -l) )); then
-          echo "Coverage is not improved."
-          exit 1
-        else
-          echo "New coverage: $coverage%. Coverage is improved!"
-        fi
-=======
       - name: Set JVM Flag
         run: echo "Running with JVM flag: ${{ matrix.jvm_flag }}"
 
       - name: Build and Test with Maven using JVM Flag
         env:
           MAVEN_OPTS: "${{ matrix.jvm_flag }}"
+        timeout-minutes: 15
         run: ./mvnw -B verify
 
-      - name: Get JaCoCo Coverage and flag
+      - name: Get JaCoCo Coverage and Log Flag
         id: coverage  
         run: |
           coverage=$(python3 config/coverage.py target/site/jacoco/jacoco.csv) 
           echo "COVERAGE=$coverage" >> $GITHUB_ENV
           echo "Coverage with flag ${{ matrix.jvm_flag }}: $coverage%"
 
-      - name: Fail if coverage has not improved.
+      - name: Fail if coverage has not improved
         run: |
           coverage=$COVERAGE
           threshold=24.46
@@ -62,4 +49,4 @@ jobs:
             exit 1
           else
             echo "New coverage: $coverage%. Coverage is improved!"
->>>>>>> Stashed changes
+          fi
