flag et coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,8 @@ jobs:
           cache: 'maven'
 
       - name: Log JVM Flag
-        run: echo "Running with JVM flag: ${{ matrix.jvm_flag }}"
+        run: |
+          echo "Running with JVM flag: ${{ matrix.jvm_flag }}"
       
       - name: Build and Test with Maven using JVM Flag
         env:
@@ -34,7 +35,8 @@ jobs:
         run: ./mvnw -B verify
 
       - name: Log Coverage for Flag
-        run: echo "Coverage with flag ${{ matrix.jvm_flag }}: $COVERAGE%"
+        run: |
+           echo "Coverage with flag ${{ matrix.jvm_flag }}: $COVERAGE%"
 
       - name: Get JaCoCo Coverage
         id: coverage  
